update maintenance API
